--- a/src/App.css
+++ b/src/App.css
@@ -35,12 +35,18 @@ body {
   text-align: center;
 }
 
+
 main {
   flex-grow: 1;
   background: #fff;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+h2 {
+  text-align: center;
+  color: #7572f4;
 }
 
 footer {
